src/test/ui/asm/type-check-4.stderr
error[E0506]: cannot assign to `a` because it is borrowed
  --> $DIR/type-check-4.rs:14:9
   |
LL |         let p = &a;
   |                 -- borrow of `a` occurs here
LL |         asm!("{}", out(reg) a);
   |         ^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `a` occurs here
LL |
LL |         println!("{}", p);
   |                        - borrow later used here

error[E0503]: cannot use `a` because it was mutably borrowed
  --> $DIR/type-check-4.rs:22:28
   |
LL |         let p = &mut a;
   |                 ------ borrow of `a` occurs here
LL |         asm!("{}", in(reg) a);
   |                            ^ use of borrowed `a`
LL |
LL |         println!("{}", p);
   |                        - borrow later used here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0503, E0506.
For more information about an error, try `rustc --explain E0503`.
